scrollbars fix

--- a/src/stylus/scrollbar.styl
+++ b/src/stylus/scrollbar.styl
@@ -1,35 +1,36 @@
 @media $display-breakpoints.md-and-up
   ::-webkit-scrollbar
-    width: 12px;
+    width: 12px
+    height: 12px
 
   ::-webkit-scrollbar-track-piece:vertical
-    background-color: transparent;
-    border-left: 1px solid $material-light.dividers;
+    background-color: transparent
+    border-left: 1px solid $material-light.dividers
 
   ::-webkit-scrollbar-track-piece:horizontal
-    background-color: transparent;
-    border-top: 1px solid $material-light.dividers;
+    background-color: transparent
+    border-top: 1px solid $material-light.dividers
 
   ::-webkit-scrollbar-thumb:vertical
   ::-webkit-scrollbar-thumb:horizontal
-    background-color: rgba(196, 196, 196, 0.5);
-    border: 1px solid $material-light.dividers;
+    background-color: rgba(196, 196, 196, 0.5)
+    border: 1px solid $material-light.dividers
 
   ::-webkit-scrollbar-thumb:vertical:hover
   ::-webkit-scrollbar-thumb:horizontal:hover
-    background-color: rgba(196, 196, 196, 0.75);
+    background-color: rgba(196, 196, 196, 0.75)
 
   ::-webkit-scrollbar-thumb:vertical:active
   ::-webkit-scrollbar-thumb:horizontal:active
-    background-color: rgba(128, 128, 128, 0.5);
+    background-color: rgba(128, 128, 128, 0.5)
 
   .application--dark
     ::-webkit-scrollbar-track-piece:vertical
-      border-left: 1px solid $material-dark.dividers;
+      border-left: 1px solid $material-dark.dividers
 
     ::-webkit-scrollbar-track-piece:horizontal
-      border-top: 1px solid $material-dark.dividers;
+      border-top: 1px solid $material-dark.dividers
 
     ::-webkit-scrollbar-thumb:vertical
     ::-webkit-scrollbar-thumb:horizontal
-      border: 1px solid $material-dark.dividers;
+      border: 1px solid $material-dark.dividers
